fixed navegador overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   gap: 1em;
   margin: 0.1em;
   margin-bottom: 1em;
-  white-space: none; }
+  white-space: none;
+  overflow: hidden; }
 
 .cover-left {
   width: 42%; }
@@ -192,10 +193,11 @@
   background-color: #dc9447;
   width: 100%;
   height: 3%;
-  z-index: 1;
-  position: fixed; }
+  z-index: 10;
+  position: fixed;
+  overflow: hidden; }
   .promotion h3 {
-    font-size: 1rem;
+    font-size: 2vh;
     font-weight: 600; }
 
 .promo_detail {
@@ -209,7 +211,8 @@
   background-color: white;
   border-bottom: 5px solid black;
   width: 100%;
-  height: 5.2rem; }
+  height: 5.2rem;
+  overflow: hidden; }
   .navegador ul {
     margin-top: 3em;
     list-style: none;
@@ -973,7 +976,8 @@
 .covershop {
   width: 100%;
   height: 20rem;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   .covershop img {
     width: 100%;
     height: 100%;
@@ -1008,7 +1012,9 @@
       transition: 0.5s ease-in-out; }
 
 @media (max-width: 420px) {
-  .covershop h2 {
-    font-size: 3.4rem; } }
+  .covershop {
+    overflow: hidden; }
+    .covershop .covershop h2 {
+      font-size: 3.4rem; } }
 
 /*# sourceMappingURL=style.css.map */
