--- a/scss/_cover.scss
+++ b/scss/_cover.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 20rem;
     position: relative;
+    overflow: hidden;
     img{
         width: 100%;
         height: 100%;
@@ -40,7 +41,10 @@
     }
 }
 @media (max-width:420px){
-    .covershop h2{
-        font-size:3.4rem;
-    }
+    .covershop{
+    overflow: hidden;
+        .covershop h2{
+            font-size:3.4rem;
+        }
+}
 }
