--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,10 +2,11 @@
     background-color: rgb(220, 148, 71);
     width:100%;
     height: 3%;
-    z-index: 1;
+    z-index: 10;
     position:fixed;
+    overflow: hidden;
     h3{
-        font-size:1rem;
+        font-size:2vh;
         font-weight: 600;
     }
 }
@@ -24,6 +25,7 @@
     border-bottom: 5px solid black;
     width: 100%;
     height: 5.2rem;
+    overflow: hidden;
     ul{
         margin-top: 3em;
         list-style: none;
