--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,6 +3,7 @@
         margin: 0.1em;
         margin-bottom: 1em;
         white-space: none;
+        overflow: hidden;
     }
     .cover-left{
         width: 42%;
